--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "pug": "^2.0.3",
     "request": "^2.87.0",
     "sequelize": "^4.32.3",
+    "sequelize-cli": "^4.0.0",
     "uuid": "^3.2.1"
   }
 }
